<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".LuasActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menghitung_luas_persegi"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="24dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_panjang"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_panjang"
        android:inputType="numberDecimal"
        android:id="@+id/input_panjang"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_lebar"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_lebar"
        android:inputType="numberDecimal"
        android:id="@+id/input_lebar"
        android:paddingBottom="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_input"
        android:id="@+id/btn_hitung"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasil:"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingBottom="8dp"/>
</LinearLayout>